# minimalist-md-site-generator

./: CMakeLists.txt  Makefile  README.md
examples/basic_site/: about.md  index.md
examples/templates/: default.html
include/: markdown_gen.h
src/: config.c  main.c  parser.c  parser.h  renderer.c  renderer.h  utils.c  utils.h
test/content/: test.md  valgrind.md
test/templates/: default.html
tests/: CMakeLists.txt  test_parser.c  test_renderer.c
